--- a/MainActivity.css
+++ b/MainActivity.css
@@ -65,6 +65,7 @@ a{
 body{
     line-height: 26px;
     font-weight: 400;
+    background-color: #fbfbfb;
 }
 .margin-r-5{
     margin-right: 5px;
@@ -247,6 +248,7 @@ p{
 }
 .First_Contianer_Service{
     width: 590px;
+    height: 420px;
     border-radius: 5px;
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 5px 0px;
@@ -262,7 +264,8 @@ p{
 }
 .Wedsta_img{
     border-radius: 5px;
-    margin-left: 10px;
+    margin-top: 10px;
+    margin-left: 20px;
     width: 570px;
     height: 200px;
     object-fit: cover;
@@ -312,4 +315,46 @@ p{
     align-items: center;
     
 }
+
+.Wedsta_container {
+    position: relative;
+    overflow: hidden;
+    width: 570px;
+    height: 200px;
+  }
+  
+  .Wedsta_container img {
+    object-fit: cover;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.7s ease;
+  }
+  
+  .First_Contianer_Service:hover .Wedsta_container img {
+    transform: scale(1.3);
+    transform-origin: center center;
+  }
+  
+  .Wedsta_container a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  .Know_more {
+  font-family: proxima-nova, sans-serif;
+  color: #e72e77;
+  background-color: #fff;
+  border: 1px solid #e72e77;
+}
+
+.First_Contianer_Service:hover .Know_more {
+    background-color: #e72e77;
+    color: #fff;
+  }
+  
+
+  
+  
   
